# digging-simulator

./: .gitignore  .gitmodules  .replit  CMakeLists.txt  README.md  compile  gitinit.sh  replit.nix  shell.nix
src/: application.cpp  buy.cpp  color.h  dig.cpp  engine.cpp  engine.h  init.cpp  menu.cpp  sell.cpp  shop.cpp  test.cpp
src/series/: main.cpp
